URI path. [David]

=item *

Clicking the "Cancel" button in a server or action profile no longer redirects
to the login screen when the hostname to which the request is sent is
different than the hostname in F<httpd.conf>. This mainly effected development
and evaluation installs. Thanks to Adam Prime for identifying the solution
(disabling C<UseCanonicalName>). [David]

=back

=head1 Version 1.11.2 (2009-11-14)

=head2 New Features

=over

=item *

Added configuration directive to allow the expiration of assets when they are
deleted. [David, Mercier, Rolf and Herring]

=item *

Added the C<publishing()>, C<previewing()>, and C<compiling()> sugar methods
to L<Bric::Util::Burner|Bric::Util::Burner> because I'm sick of seeing the
same code to check modes in templates all the time. [David]

=item *

Take keyword permissions into account when accessing or creating keywords from
the story and media profiles as well as category manager. [Adrian Yee]

=item *

Added support for copying and pasting elements in the story profile.
[Adrian Yee]

=item *

Added the C<find_or_create_alternate()> method to
L<Bric::Biz::Asset::Business::Media|Bric::Biz::Asset::Business::Media> class.
This method makes it easy for templates to create alternate representations of
an image as a new media document. Useful for generating thumbnails and the 
like. As a side-effect, L<Imager|Imager> is now a required module. [David]

=item *

Since L<Imager|Imager> is now a required module, the C<USE_THUMBNAILS>
directive is now enabled by default as well. [David]

=item *

Added the following aliases, so I can pretend that the versions with double
underscores don't exist:

=over

=item C<Bric::Biz::Asset::Business::set_source_id()>

=item C<Bric::Biz::Asset::Business::get_source_id()>

=item C<Bric::Biz::Asset::get_user_id()>

=item C<Bric::Biz::Asset::Business::Media::get_category_id()>

=back

[David]

=item *

Fixed a compatibility issue in